--- a/index.html
+++ b/index.html
@@ -1,63 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+  <title></title>
 
-	<script type='text/javascript' src='lib/jquery.js'></script>
-	<script type='text/javascript' src='lib/angular.js'></script>
-	<script type='text/javascript' src='lib/ng-infinite-scroll.min.js'></script></head>
+  <script type='text/javascript' src='lib/jquery.js'></script>
+  <script type='text/javascript' src='lib/angular.js'></script>
+  <script type='text/javascript' src='lib/ng-infinite-scroll.min.js'></script></head>
 
 <body>
-	<div ng-app='myApp' ng-controller='DemoController'>
-  <div infinite-scroll='reddit.nextPage()' infinite-scroll-disabled='reddit.busy' infinite-scroll-distance='1'>
-    <div ng-repeat='item in reddit.items'>
-      <span class='score'>{{item.score}}</span>
-      <span class='title'>
-        <a ng-href='{{item.url}}' target='_blank'>{{item.title}}</a>
-      </span>
-      <small>by {{item.author}} -
-        <a ng-href='http://reddit.com{{item.permalink}}' target='_blank'>{{item.num_comments}} comments</a>
-      </small>
-      <div style='clear: both;'></div>
-    </div>
-    <div ng-show='reddit.busy'>Loading data...</div>
+<div ng-app='myApp' ng-controller='DemoController'>
+  <div infinite-scroll='loadMore()' infinite-scroll-distance='2'>
+    <img ng-repeat='image in images' ng-src='http://placehold.it/225x250&text={{image}}'>
   </div>
 </div>
 </body>
 
 <script type="text/javascript">
-	
-	var myApp = angular.module('myApp', ['infinite-scroll']);
+  
+var myApp = angular.module('myApp', ['infinite-scroll']);
+myApp.controller('DemoController', function($scope) {
+  $scope.images = [1, 2, 3, 4, 5, 6, 7, 8];
 
-myApp.controller('DemoController', function($scope, Reddit) {
-  $scope.reddit = new Reddit();
-});
-
-// Reddit constructor function to encapsulate HTTP and pagination logic
-myApp.factory('Reddit', function($http) {
-  var Reddit = function() {
-    this.items = [];
-    this.busy = false;
-    this.after = '';
+  $scope.loadMore = function() {
+    var last = $scope.images[$scope.images.length - 1];
+    for(var i = 1; i <= 8; i++) {
+      $scope.images.push(last + i);
+    }
   };
-
-  Reddit.prototype.nextPage = function() {
-    if (this.busy) return;
-    this.busy = true;
-
-    var url = "https://api.reddit.com/hot?after=" + this.after + "&jsonp=JSON_CALLBACK";
-    $http.jsonp(url).success(function(data) {
-      var items = data.data.children;
-      for (var i = 0; i < items.length; i++) {
-        this.items.push(items[i].data);
-      }
-      this.after = "t3_" + this.items[this.items.length - 1].id;
-      this.busy = false;
-    }.bind(this));
-  };
-
-  return Reddit;
 });
-
 </script>
 </html>
